Updated email and github link

--- a/main.tex
+++ b/main.tex
@@ -16,13 +16,13 @@
 \noindent
 \makebox[0pt][l]{}%
 \makebox[\textwidth][c]{}%
-\makebox[0pt][r]{\href{https://github.com/MaeveMonster}{github.com/MaeveMonster\\}}
+\makebox[0pt][r]{\href{https://github.com/maeve-monster}{github.com/maeve-monster\\}}
 \makebox[0pt][l]{}%
 \makebox[\textwidth][c]{}%
 \makebox[0pt][r]{(585) 755-7242}
 \makebox[0pt][l]{}%
 \makebox[\textwidth][c]{}%
-\makebox[0pt][r]{\href{mailto:kathrynmaeve@gmail.com}{kathrynmaeve@gmail.com}}
+\makebox[0pt][r]{\href{mailto:kathrynmaeveroy@gmail.com}{kathrynmaeveroy@gmail.com}}
 
 \begin{resume}
 
